# acme-dryclean-web

./: .dockerignore  .env.example  .gitignore  .skill-developer.md  AGENTS.md  AI_TEAM_PIPELINE.md  API_SPECIFICATION.md  ARCHITECTURE.md  BUSINESS_TASK_FORM.md  DATABASE_SCHEMA.md  DEPLOY.md  DESIGN_BRIEF.md  INFRASTRUCTURE.md  PIPELINE.js  README.md  SKILLS_MATRIX.md  SKILL_ANALYST.md  SKILL_ARCHITECT.md  SKILL_DEVOPS.md  SKILL_TESTER.md  docker-compose.blue.yml  docker-compose.dev.yml  docker-compose.green.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  init-letsencrypt.sh  opencode.json  price.xls  prometheus.yml  прайс_на_материалы_Электроугли.xlsx
backend/services/content/: .dockerignore  Dockerfile  pyproject.toml
backend/services/content/alembic/: env.py
backend/services/content/app/: config.py  database.py  main.py
backend/services/content/app/models/: models.py
backend/services/content/app/schemas/: schemas.py
backend/services/content/scripts/: create_admin.py
backend/services/tracking/: Dockerfile  alembic.ini  pyproject.toml
backend/services/tracking/alembic/: env.py
backend/services/tracking/alembic/versions/: 001_create_analytics_tables.py
backend/services/tracking/app/: config.py  database.py  main.py
backend/services/tracking/app/core/: __init__.py  geo.py  metrics.py
backend/services/tracking/app/models/: __init__.py  analytics.py
backend/services/tracking/app/schemas/: __init__.py  event.py  stats.py
backend/services/tracking/app/services/: __init__.py  analytics.py
backend/services/tracking/app/tasks/: __init__.py  cleanup.py
backend/services/tracking/tests/: test_models.py
frontend/: .dockerignore  (+4 more)
(+98 files in other folders)
